--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -24,6 +24,7 @@ javax = "1"
 material3Android = "1.3.1"
 lifecycleKtx = "2.8.7"
 uiTextGoogleFonts = "1.7.6"
+hiltNavigationCompose = "1.2.0"
 
 
 [libraries]
@@ -51,6 +52,8 @@ kotlin-coroutines = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutine
 # Hilt
 hilt = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt" }
 hilt-compiler = { group = "com.google.dagger", name = "hilt-android-compiler", version.ref = "hilt" }
+androidx-hilt-navigation-compose = { group = "androidx.hilt", name = "hilt-navigation-compose", version.ref = "hiltNavigationCompose" }
+
 javax = { group = "javax.inject", name = "javax.inject", version.ref = "javax" }
 
 # Spotless
