--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,6 +13,7 @@ appcompat = "1.7.0"
 material = "1.12.0"
 hilt = "2.52"
 navigationCompose = "2.8.5"
+pagingCompose = "3.3.5"
 spotless = "6.19.0"
 ksp = "2.0.20-1.0.24"
 retrofit = "2.11.0"
@@ -21,10 +22,10 @@ coroutines = "1.8.1"
 jetbrainsKotlinJvm = "2.0.20"
 okhttp = "4.12.0"
 javax = "1"
-material3Android = "1.3.1"
 lifecycleKtx = "2.8.7"
 uiTextGoogleFonts = "1.7.6"
 hiltNavigationCompose = "1.2.0"
+pagingCommonAndroid = "3.3.5"
 
 
 [libraries]
@@ -72,6 +73,11 @@ okhttp-logging = { module = "com.squareup.okhttp3:logging-interceptor", version.
 androidx-lifecycle-viewmodel-ktx = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-ktx", version.ref = "lifecycleKtx" }
 androidx-lifecycle-viewmodel-compose = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "lifecycleKtx" }
 androidx-ui-text-google-fonts = { group = "androidx.compose.ui", name = "ui-text-google-fonts", version.ref = "uiTextGoogleFonts" }
+
+# Compose
+androidx-paging-compose = { module = "androidx.paging:paging-compose", version.ref = "pagingCompose" }
+androidx-paging-common-android = { group = "androidx.paging", name = "paging-common-android", version.ref = "pagingCommonAndroid" }
+
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
